parser0823.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */ (function() {
  'use strict'

  function peg$subclass(child, parent) {
    function ctor() {
      this.constructor = child
    }
    ctor.prototype = parent.prototype
    child.prototype = new ctor()
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message = message
    this.expected = expected
    this.found = found
    this.location = location
    this.name = 'SyntaxError'

    if (typeof Error.captureStackTrace === 'function') {
      Error.captureStackTrace(this, peg$SyntaxError)
    }
  }

  peg$subclass(peg$SyntaxError, Error)

  peg$SyntaxError.buildMessage = function(expected, found) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"'
      },

      class(expectation) {
        let escapedParts = ''
        let i

        for (i = 0; i < expectation.parts.length; i++) {
          escapedParts += Array.isArray(expectation.parts[i])
            ? classEscape(expectation.parts[i][0]) +
              '-' +
              classEscape(expectation.parts[i][1])
            : classEscape(expectation.parts[i])
        }

        return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']'
      },

      any(expectation) {
        return 'any character'
      },

      end(expectation) {
        return 'end of input'
      },

      other(expectation) {
        return expectation.description
      }
    }

    function hex(ch) {
      return ch
        .charCodeAt(0)
        .toString(16)
        .toUpperCase()
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g, '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function(ch) {
          return '\\x0' + hex(ch)
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
          return '\\x' + hex(ch)
        })
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g, '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function(ch) {
          return '\\x0' + hex(ch)
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
          return '\\x' + hex(ch)
        })
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
    }

    function describeExpected(expected) {
      const descriptions = new Array(expected.length)
      let i
      let j

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i])
      }

      descriptions.sort()

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i]
            j++
          }
        }
        descriptions.length = j
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0]

        case 2:
          return descriptions[0] + ' or ' + descriptions[1]

        default:
          return (
            descriptions.slice(0, -1).join(', ') +
            ', or ' +
            descriptions[descriptions.length - 1]
          )
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input'
    }

    return (
      'Expected ' +
      describeExpected(expected) +
      ' but ' +
      describeFound(found) +
      ' found.'
    )
  }

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {}

    const peg$FAILED = {}

    const peg$startRuleFunctions = { formula: peg$parseformula }
    let peg$startRuleFunction = peg$parseformula

    const peg$c0 = '('
    const peg$c1 = peg$literalExpectation('(', false)
    const peg$c2 = ','
    const peg$c3 = peg$literalExpectation(',', false)
    const peg$c4 = ')'
    const peg$c5 = peg$literalExpectation(')', false)
    const peg$c6 = function(l, r, p) {
      return [l, r, p]
    }
    const peg$c7 = function(l, r) {
      return [l, r]
    }
    const peg$c8 = function(w) {
      return w
    }
    const peg$c9 = function(a) {
      let st = ''
      a.forEach((l) => {
        st += l
      })
      return st
    }
    const peg$c10 = "'"
    const peg$c11 = peg$literalExpectation("'", false)
    const peg$c12 = /^[a-zA-Z0-9_']/
    const peg$c13 = peg$classExpectation(
      [['a', 'z'], ['A', 'Z'], ['0', '9'], '_'],
      false,
      false
    )
    const peg$c14 = peg$otherExpectation('whitespace')
    const peg$c15 = /^[ \t\n\r]/
    const peg$c16 = peg$classExpectation([' ', '\t', '\n', '\r'], false, false)

    let peg$currPos = 0
    let peg$savedPos = 0
    const peg$posDetailsCache = [{ line: 1, column: 1 }]
    let peg$maxFailPos = 0
    let peg$maxFailExpected = []
    let peg$silentFails = 0

    let peg$result

    if ('startRule' in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error(
          'Can\'t start parsing from rule "' + options.startRule + '".'
        )
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos)
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos)
    }

    function expected(description, location) {
      location =
        location !== void 0
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      )
    }

    function error(message, location) {
      location =
        location !== void 0
          ? location
          : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location)
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: 'literal', text, ignoreCase }
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return {
        type: 'class',
        parts,
        inverted,
        ignoreCase
      }
    }

    function peg$anyExpectation() {
      return { type: 'any' }
    }

    function peg$endExpectation() {
      return { type: 'end' }
    }

    function peg$otherExpectation(description) {
      return { type: 'other', description }
    }

    function peg$computePosDetails(pos) {
      let details = peg$posDetailsCache[pos]
      let p

      if (details) {
        return details
      } else {
        p = pos - 1
        while (!peg$posDetailsCache[p]) {
          p--
        }

        details = peg$posDetailsCache[p]
        details = {
          line: details.line,
          column: details.column
        }

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++
            details.column = 1
          } else {
            details.column++
          }

          p++
        }

        peg$posDetailsCache[pos] = details
        return details
      }
    }

    function peg$computeLocation(startPos, endPos) {
      const startPosDetails = peg$computePosDetails(startPos)
      const endPosDetails = peg$computePosDetails(endPos)

      return {
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column
        }
      }
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) {
        return
      }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos
        peg$maxFailExpected = []
      }

      peg$maxFailExpected.push(expected)
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location)
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      )
    }

    function peg$parseformula() {
      let s0, s1, s2, s3, s4, s5, s6

      s0 = peg$currPos
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c0
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c1)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseformula()
        if (s2 === peg$FAILED) {
          s2 = peg$parsepair()
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s3 = peg$c2
            peg$currPos++
          } else {
            s3 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c3)
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseformula()
            if (s4 === peg$FAILED) {
              s4 = peg$parsepair()
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c4
                peg$currPos++
              } else {
                s5 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c5)
                }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseprime()
                if (s6 === peg$FAILED) {
                  s6 = null
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0
                  s1 = peg$c6(s2, s4, s6)
                  s0 = s1
                } else {
                  peg$currPos = s0
                  s0 = peg$FAILED
                }
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }

      return s0
    }

    function peg$parsepair() {
      let s0, s1, s2, s3, s4, s5

      s0 = peg$currPos
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c0
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c1)
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseword()
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s3 = peg$c2
            peg$currPos++
          } else {
            s3 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c3)
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseword()
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c4
                peg$currPos++
              } else {
                s5 = peg$FAILED
                if (peg$silentFails === 0) {
                  peg$fail(peg$c5)
                }
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0
                s1 = peg$c7(s2, s4)
                s0 = s1
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos
        s1 = peg$parseword()
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c8(s1)
        }
        s0 = s1
      }

      return s0
    }

    function peg$parseword() {
      let s0, s1, s2

      s0 = peg$currPos
      s1 = []
      s2 = peg$parseletter()
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2)
          s2 = peg$parseletter()
        }
      } else {
        s1 = peg$FAILED
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c9(s1)
      }
      s0 = s1

      return s0
    }

    function peg$parseprime() {
      let s0

      if (input.charCodeAt(peg$currPos) === 39) {
        s0 = peg$c10
        peg$currPos++
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c11)
        }
      }

      return s0
    }

    function peg$parseletter() {
      let s0

      if (peg$c12.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s0 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c13)
        }
      }

      return s0
    }

    function peg$parse_() {
      let s0, s1

      peg$silentFails++
      s0 = []
      if (peg$c15.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c16)
        }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1)
        if (peg$c15.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c16)
          }
        }
      }
      peg$silentFails--
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c14)
        }
      }

      return s0
    }

    peg$result = peg$startRuleFunction()

    if (peg$result !== peg$FAILED && peg$currPos === input.length) {
      return peg$result
    } else {
      if (peg$result !== peg$FAILED && peg$currPos < input.length) {
        peg$fail(peg$endExpectation())
      }

      throw peg$buildStructuredError(
        peg$maxFailExpected,
        peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
        peg$maxFailPos < input.length
          ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
          : peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
      )
    }
  }

  return {
    SyntaxError: peg$SyntaxError,
    parse: peg$parse
  }
})()
